# UNObot

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  UNObot.sln  UNObot.sln.DotSettings  bitbucket-pipelines.yml  my_known_hosts
.github/workflows/: codeql-analysis.yml  dotnet.yml
src/ConnectBot/: ConnectBot.csproj
src/ConnectBot/Modules/: Initializer.cs  MainCommands.cs
src/ConnectBot/Services/: AFKTimerService.cs  ButtonHandler.cs  ConfigService.cs  DatabaseService.cs  EmbedService.cs  GameService.cs
src/ConnectBot/Templates/: Board.cs  ConnectBotConfig.cs  FakeContext.cs  Game.cs  GameQueue.cs  Gamemodes.cs  IndexedDictionary.cs  IndexedDictionaryConverter.cs
src/DuplicateDetector/: DuplicateDetector.csproj
src/DuplicateDetector/Modules/: Initializer.cs  MainCommands.cs
src/DuplicateDetector/Services/: AIService.cs  IndexerService.cs
src/DuplicateDetector/Templates/: AIConfig.cs  DuplicateDetectorConfig.cs  Messages.cs
src/RCONHelper/: CMakeLists.txt  MIDIHelper.cpp  MIDIHelper.h  MatrixHelper.cpp  MatrixHelper.h  NoteData.cpp  NoteData.h  RCONHelper.cpp  RCONHelper.h  RCONSocket.cpp  RCONSocket.h  RCONVideo.cpp  Semaphore.h  Threadable.h  Utilities.h  WoolData.cpp  WoolData.h
src/UNObot/: Program.cs  README.md  UNObot.csproj  commit  config.json
src/UNObot.Core/: CoreCommands.cs  UNObot.Core.csproj
src/UNObot.Core/Modules/: CoreCommands.cs  Initializer.cs  UNOCommands.cs
src/UNObot.Core/Services/: AFKTimerService.cs  DatabaseService.cs  EmbedService.cs  InputHandlerService.cs  QueueHandlerService.cs  UNODatabaseService.cs  UNOPlayCardService.cs
src/UNObot.Core/UNOCore/: Card.cs  CardEmote.cs  Gamemodes.cs  ServerCard.cs  ServerDeck.cs
src/UNObot.Google/: UNObot.Google.csproj
src/UNObot.Google/Modules/: CoreCommands.cs  Initializer.cs
src/UNObot.Google/Services/: GoogleSearchService.cs
src/UNObot.Google/Templates/: GoogleConfig.cs
src/UNObot.Misc/: UNObot.Misc.csproj
src/UNObot.Misc/Modules/: CoreCommands.cs  Initializer.cs
src/UNObot.Misc/Services/: DatabaseService.cs
src/UNObot.MusicBot/: UNObot.MusicBot.csproj
src/UNObot.MusicBot/Modules/: Initializer.cs  MusicBotCommands.cs
src/UNObot.MusicBot/MusicCore/: Player.cs  Song.cs
src/UNObot.MusicBot/Services/: EmbedService.cs  MusicBotService.cs  YoutubeService.cs
src/UNObot.Plugins/: IConfig.cs  IDBConfig.cs  ILogger.cs  IPlugin.cs  IUNObotCommandContext.cs  IUNObotConfig.cs  LoggerService.cs  UNObot.Plugins.csproj  UNObotCommandContext.cs  UNObotModule.cs
src/UNObot.Plugins/Attributes/: DisableDMsAttribute.cs  HelpAttribute.cs  SlashCommandAttribute.cs
src/UNObot.Plugins/Helpers/: DatabaseExtensions.cs  PluginHelper.cs  TimeHelper.cs
src/UNObot.Plugins/Settings/: Setting.cs  SettingItems.cs  SettingsManager.cs
src/UNObot.Plugins/TerminalCore/: ColorConsole.cs  ThreadSafeRandom.cs
src/UNObot.ServerQuery/: UNObot.ServerQuery.csproj
src/UNObot.ServerQuery/Interop/: RCONHelper.cs
src/UNObot.ServerQuery/Modules/: Initializer.cs  ServerCommands.cs
src/UNObot.ServerQuery/Queries/: A2SInfo.cs  A2SPlayer.cs  A2SRules.cs  IQuery.cs  IRCON.cs  MCPEStatus.cs  MCQuery.cs  MCStatus.cs  MinecraftRCON.cs  MinecraftStatus.cs  RCONHelperWin.cs  RCONManager.cs  Utilities.cs
src/UNObot.ServerQuery/Services/: DatabaseService.cs  EmbedService.cs  MinecraftProcessorService.cs  QueryHandlerService.cs  UBOWServerLoggerService.cs  UnturnedReleaseNoteTimerService.cs
(+73 files in other folders)
